tests/ui/parser/help-set-edition-ice-122130.rs
enum will {
    s#[c"owned_box"]
    //~^ERROR expected one of `(`, `,`, `=`, `{`, or `}`, found `#`
    //~|ERROR expected item, found `"owned_box"`
}
